--- a/style.css
+++ b/style.css
@@ -1,7 +1,107 @@
+header {
+  background-color: DarkSlateGray;
+  width: auto;
+  height: 140px;
+  padding-bottom: 5px;
+
+}
 header h1{
-  font-style: italic;
+    font-style: italic;
   font-weight: bold;
   text-align: center;
-  background-color: blue;
-  
+  /*display: inline;*/
+}
+header h3  {
+  color: white;
+text-align: center;
+padding-top: 10px;
+}
+header p {
+color: white;
+text-align: center;
+padding-bottom: 10px;
+}
+ header img {
+float: left;
+  width: 150px;
+  /*margin-bottom: 100px;*/
+  height: 145px;
+  display: inline;
+  /*margin-bottom: 200px;*/
+  /*margin-left: 10px;*/
+
+}
+
+ div aside {
+
+  background-color: MediumAquamarine;
+  display: inline-block;
+  background-color: PaleTurquoise;
+  width: 189px;
+  height:500px;
+  margin-bottom: 100px;
+  margin-right: 200px;
+}
+
+div aside p { text-align: left;
+  font-style: normal;
+  color: SteelBlue;
+  margin-left: 10px;
+}
+ div aside ul {
+  font-style: oblique;
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 90%;
+
+}
+div aside li {
+  margin-top: 10px;
+  margin-left: 15px;
+  font-style: oblique;
+   color: Gray;
+}
+div section {
+  width: 880px;px;
+  height: 500px;
+  background-color: LightCyan;
+  display: inline-block;
+  float: right;
+  /*margin-left: 10px;*/
+  }
+  div section h1 {
+  font-style: normal;
+  text-align: center;
+  font-weight: bold;
+}
+div section h3 {
+  text-decoration: 	SeaGreen underline;
+  font-style: oblique;
+  text-align: left;
+  margin-top: 20px;
+}
+div section p {
+  text-align: left;
+    font-style: normal;
+    color: SteelBlue;
+    margin-left: 10px;
+    background-color: LightCyan;
+    width: auto;
+    height: 30px;
+    border-top: color: Cyan 2px;
+
+}
+div section ul {
+  font-style: oblique;
+  list-style-type: none;
+    margin: 10px;
+    padding: 0;
+    font-size: 90%;
+}
+div section li {
+  margin-top: 20px;
+  margin-left: 15px;
+  font-style: oblique;
+   color: Gray;
 }
